# internal/items/http/handler/budgeting/report-handler.go
@@ -104,3 +104,81 @@ func (h *ReportHandler) GetIncomeReportHandler(c *gin.Context) {
 
 	c.IndentedJSON(200, resp)
 }
+
+// GetBudgetPerformanceReportHandler godoc
+// @Summary      Get budget performance report
+// @Security     BearerAuth
+// @Description  Retrieve a budget performance report for a specific budget by its ID
+// @Tags         User Reports
+// @Produce      json
+// @Param        id    path      string  true  "Budget ID"
+// @Success      200    {object}  pb.BudgetPerformanceReportResponse
+// @Failure      400    {object}  gin.H "Invalid request payload"
+// @Failure      401    {object}  gin.H "User not authenticated"
+// @Failure      500    {object}  gin.H "Failed to retrieve budget performance report"
+// @Router       /user/report/bugdet [get]
+func (h *ReportHandler) GetBudgetPerformanceReportHandler(c *gin.Context) {
+	h.logger.Info("GetBudgetPerformanceReportHandler called")
+
+	id := c.Param("id")
+	if id == "" {
+		c.IndentedJSON(400, gin.H{"error": "Invalid request payload"})
+		return
+	}
+
+	userId := middleware.GetUser_id(c, h.config)
+	if userId == "" {
+		c.IndentedJSON(401, gin.H{"error": "User not authenticated"})
+		return
+	}
+
+	resp, err := h.report.GetBudgetPerformanceReport(c.Request.Context(), &pb.GetBudgetPerformanceReportRequest{
+		UserId:   userId,
+		BudgetId: id,
+	})
+	if err != nil {
+		c.IndentedJSON(500, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.IndentedJSON(200, resp)
+}
+
+// GetGoalProgressReportHandler godoc
+// @Summary      Get goal progress report
+// @Security     BearerAuth
+// @Description  Retrieve a goal progress report for a specific goal by its ID
+// @Tags         User Reports
+// @Produce      json
+// @Param        id    path      string  true  "Goal ID"
+// @Success      200    {object}  pb.GoalProgressReportResponse
+// @Failure      400    {object}  gin.H "Invalid request payload"
+// @Failure      401    {object}  gin.H "User not authenticated"
+// @Failure      500    {object}  gin.H "Failed to retrieve goal progress report"
+// @Router       /user/report/goal [get]
+func (h *ReportHandler) GetGoalProgressReportHandler(c *gin.Context) {
+	h.logger.Info("GetGoalProgressReportHandler called")
+
+	id := c.Param("id")
+	if id == "" {
+		c.IndentedJSON(400, gin.H{"error": "Invalid request payload"})
+		return
+	}
+
+	userId := middleware.GetUser_id(c, h.config)
+	if userId == "" {
+		c.IndentedJSON(401, gin.H{"error": "User not authenticated"})
+		return
+	}
+
+	resp, err := h.report.GetGoalProgressReport(c.Request.Context(), &pb.GetGoalProgressReportRequest{
+		UserId: userId,
+		GoalId: id,
+	})
+	if err != nil {
+		c.IndentedJSON(500, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.IndentedJSON(200, resp)
+}
